# ethos-paper

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
ethos/: __main__.py  cli.py  constants.py  metrics.py  model.py  utils.py
ethos/commands/: infer.py  tokenize_.py  train.py
ethos/datasets/: __init__.py  admission_mortality.py  base.py  experimental.py  mimic.py  mortality.py  readmission.py
ethos/inference/: __init__.py  constants.py  run_inference.py
ethos/tokenize/: __init__.py  base.py  constants.py  separators.py  special_tokens.py  tokenization_steps.py  translation_base.py  vocabulary.py
ethos/tokenize/mimic/: atc.py  code_translation.py  preprocessors.py  special.py
ethos/train/: __init__.py  metrics.py  training_loop.py  utils.py
notebooks/: data_process_example.ipynb  dataset_analysis.ipynb  datasets.ipynb  embeddings_analysis.ipynb  llm_readmission_task.ipynb  mimic_paper_results_agg.ipynb
scripts/: convert_csv_to_parquet.py  data_train_test_split.py  run_inference.sh  run_tokenization.sh  run_training.sh
